# libcsvevent

./: CMakeLists.txt  README.md
conda-recipe/: meta.yaml
data/: protocol.xml
examples/: CMakeLists.txt  basic.cpp
include/: CMakeLists.txt  csv_event.hpp
tests/: CMakeLists.txt  run_tests.cpp
